# Level-Up-Python

argparse-demo/: Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
argparse-demo/argparse_demo/src/: main.py
pylogging/: Dockerfile  README.md  docker-compose.debug.yml  docker-compose.yml  logs.txt  pyproject.toml
pylogging/src/: adding_context.py  adding_extra_context.py  custome_logger.py  logging_errors  logging_to_a_file.py  logging_uncuaght_exceptions.py  main.py  new_log_level.py  output_config.py  parsing_output_as_json.py  rotating_logs.py  using_filters.py  using_handlers.py
working-with-poetry/poetry-demo/: pyproject.toml
